examples/test/testpolicy2148.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2148
  namespace: namespace127
spec:
  podSelector:
    matchLabels:
      key33: value21
      key29: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value15
          key28: value10
          key21: value11
      podSelector:
        matchLabels:
          key23: value13
          key45: value23
          key49: value10
